# HireGauge

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  README.md  pyproject.toml
.claude/agents/: collector-builder.md  eval-calibrator.md  report-auditor.md  rubric-researcher.md
.claude/skills/hiregauge-collector/: SKILL.md
.claude/skills/hiregauge-rubric-authoring/: SKILL.md
.claude/skills/hiregauge-run/: SKILL.md
.claude/skills/hireme-run/: SKILL.md
.github/: SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  calibration.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: rubrics.md
scripts/: setup-branch-protection.sh
src/hiregauge/: __init__.py  __main__.py  cache.py  cli.py  config.py  evaluator.py  models.py  pipeline.py  prompt_safety.py
src/hiregauge/agents/: __init__.py  base.py  registry.py  university.py
src/hiregauge/analysis/: __init__.py  crosscheck.py  github_authenticity.py
src/hiregauge/collectors/: __init__.py  _safe_fetch.py  base.py  github.py  kaggle.py  resume.py  scholar.py  web.py
src/hiregauge/llm/: __init__.py  anthropic_provider.py  base.py  factory.py  gemini_provider.py
src/hiregauge/report/: __init__.py  _common.py  html.py  renderer.py
src/hireme/: __main__.py  cli.py  config.py  models.py  pipeline.py
src/hireme/agents/: airesearch.py  base.py  bigtech.py  general.py  quant.py
src/hireme/analysis/: __init__.py  deterministic.py
src/hireme/collectors/: kaggle.py  resume.py  web.py
src/hireme/llm/: gemini_provider.py
src/hireme/report/: html.py  renderer.py
tests/: test_agents.py  test_cache.py  test_cli.py  test_collectors_offline.py  test_crosscheck.py  test_deterministic.py  test_docs.py  test_evaluation.py  test_github.py  test_no_committed_cache.py  test_prompt_safety.py  test_report.py  test_resume.py  test_safe_fetch.py  test_smoke.py
